# src/Generated/Normalizer/DebtLineItemResourceNormalizer.php
@@ -1,0 +1,96 @@
+<?php
+
+namespace Datenkraft\Backbone\Client\DebtCapturingApi\Generated\Normalizer;
+
+use Jane\JsonSchemaRuntime\Reference;
+use Datenkraft\Backbone\Client\DebtCapturingApi\Generated\Runtime\Normalizer\CheckArray;
+use Symfony\Component\Serializer\Exception\InvalidArgumentException;
+use Symfony\Component\Serializer\Normalizer\DenormalizerAwareInterface;
+use Symfony\Component\Serializer\Normalizer\DenormalizerAwareTrait;
+use Symfony\Component\Serializer\Normalizer\DenormalizerInterface;
+use Symfony\Component\Serializer\Normalizer\NormalizerAwareInterface;
+use Symfony\Component\Serializer\Normalizer\NormalizerAwareTrait;
+use Symfony\Component\Serializer\Normalizer\NormalizerInterface;
+class DebtLineItemResourceNormalizer implements DenormalizerInterface, NormalizerInterface, DenormalizerAwareInterface, NormalizerAwareInterface
+{
+    use DenormalizerAwareTrait;
+    use NormalizerAwareTrait;
+    use CheckArray;
+    public function supportsDenormalization($data, $type, $format = null)
+    {
+        return $type === 'Datenkraft\\Backbone\\Client\\DebtCapturingApi\\Generated\\Model\\DebtLineItemResource';
+    }
+    public function supportsNormalization($data, $format = null)
+    {
+        return is_object($data) && get_class($data) === 'Datenkraft\\Backbone\\Client\\DebtCapturingApi\\Generated\\Model\\DebtLineItemResource';
+    }
+    public function denormalize($data, $class, $format = null, array $context = array())
+    {
+        if (isset($data['$ref'])) {
+            return new Reference($data['$ref'], $context['document-origin']);
+        }
+        if (isset($data['$recursiveRef'])) {
+            return new Reference($data['$recursiveRef'], $context['document-origin']);
+        }
+        $object = new \Datenkraft\Backbone\Client\DebtCapturingApi\Generated\Model\DebtLineItemResource();
+        if (null === $data || false === \is_array($data)) {
+            return $object;
+        }
+        if (\array_key_exists('debtLineItemId', $data)) {
+            $object->setDebtLineItemId($data['debtLineItemId']);
+        }
+        if (\array_key_exists('skuCode', $data)) {
+            $object->setSkuCode($data['skuCode']);
+        }
+        if (\array_key_exists('quantity', $data)) {
+            $object->setQuantity($data['quantity']);
+        }
+        if (\array_key_exists('projectId', $data)) {
+            $object->setProjectId($data['projectId']);
+        }
+        if (\array_key_exists('unit', $data)) {
+            $object->setUnit($data['unit']);
+        }
+        if (\array_key_exists('usageStart', $data)) {
+            $object->setUsageStart(\DateTime::createFromFormat('Y-m-d\\TH:i:sP', $data['usageStart']));
+        }
+        if (\array_key_exists('usageEnd', $data)) {
+            $object->setUsageEnd(\DateTime::createFromFormat('Y-m-d\\TH:i:sP', $data['usageEnd']));
+        }
+        if (\array_key_exists('priceTotalMinor', $data)) {
+            $object->setPriceTotalMinor($data['priceTotalMinor']);
+        }
+        if (\array_key_exists('priceCurrency', $data)) {
+            $object->setPriceCurrency($data['priceCurrency']);
+        }
+        if (\array_key_exists('invoiceNumber', $data)) {
+            $object->setInvoiceNumber($data['invoiceNumber']);
+        }
+        return $object;
+    }
+    public function normalize($object, $format = null, array $context = array())
+    {
+        $data = array();
+        $data['debtLineItemId'] = $object->getDebtLineItemId();
+        $data['skuCode'] = $object->getSkuCode();
+        if (null !== $object->getQuantity()) {
+            $data['quantity'] = $object->getQuantity();
+        }
+        $data['projectId'] = $object->getProjectId();
+        if (null !== $object->getUnit()) {
+            $data['unit'] = $object->getUnit();
+        }
+        $data['usageStart'] = $object->getUsageStart()->format('Y-m-d\\TH:i:sP');
+        $data['usageEnd'] = $object->getUsageEnd()->format('Y-m-d\\TH:i:sP');
+        if (null !== $object->getPriceTotalMinor()) {
+            $data['priceTotalMinor'] = $object->getPriceTotalMinor();
+        }
+        if (null !== $object->getPriceCurrency()) {
+            $data['priceCurrency'] = $object->getPriceCurrency();
+        }
+        if (null !== $object->getInvoiceNumber()) {
+            $data['invoiceNumber'] = $object->getInvoiceNumber();
+        }
+        return $data;
+    }
+}
